# game

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/game-test/: main.c
src/shm-drawing/: shm-drawing.c
src/shm-windowing/: shm-windowing.c
src/sol-gfxile-gp-ch02/: main.c
